--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,11 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "../assets/styles/global.scss" * {
+@import "../assets/styles/global.scss"; * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Railway", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body {
