--- a/src/screens/HomePage/HomePage.module.scss
+++ b/src/screens/HomePage/HomePage.module.scss
@@ -69,7 +69,8 @@
   display: flex;
   gap: 12px;
   align-items: center;
-  .arr{
+
+  .arr {
     width: 43px;
     height: 43px;
     background: #7BBEFF;
@@ -79,4 +80,89 @@
     align-items: center;
     cursor: pointer;
   }
+}
+
+.banks {
+  margin-bottom: 2rem;
+
+  .title {
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+    color: #000;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 46px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 86.4%; /* 39.744px */
+    span {
+      color: #4DA7FF;
+    }
+  }
+
+  .bank_map_cont {
+    height: 510px;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+
+    .picture {
+      border: 1px solid #D9DBDF;
+      border-radius: 14px;
+      width: 480px;
+      height: 100%;
+      background: url('../../assets/icons/banki_all_back.png');
+    }
+
+    .bank_map {
+      width: 730px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .banK_mWrap {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        width: 730px;
+        max-height: 85%;
+      }
+      .nav_search{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        .search{
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+          width: 431px;
+          height: 60px;
+          padding: 18px 40px 18px 22px;
+          border-radius: 7px;
+          border: 1px solid #D9D9D9;
+          background: #FFF;
+          input{
+            background: transparent;
+            width: 100%;
+            height: 100%;
+            outline: 0;
+            color: #000;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 86.4%; /* 15.552px */
+            &::placeholder{
+              color: #A3A3A3;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 86.4%; /* 15.552px */
+            }
+          }
+        }
+      }
+    }
+  }
+
 }
