--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,14 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
-@import "../assets/styles/global.scss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import "../assets/styles/global.scss"; * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+}
+
+body {
+  background: rgb(245, 245, 245);
+  padding-top: 20px;
+}
