--- a/src/screens/HomePage/HomePage.module.scss
+++ b/src/screens/HomePage/HomePage.module.scss
@@ -2,8 +2,8 @@
   width: 100%;
   height: 553px;
   border-radius: 14px;
-  border: 1px solid #d9dbdf;
-  background: #fff;
+  border: 1px solid #D9DBDF;
+  background: #FFF;
   padding: 2rem;
   background: url("./../../assets/icons/back1.png");
 
@@ -41,7 +41,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #4da7ff;
+        color: #4DA7FF;
         leading-trim: both;
         text-edge: cap;
         font-size: 20px;
@@ -49,8 +49,8 @@
         font-weight: 500;
         line-height: 86.4%; /* 17.28px */
         border-radius: 7px;
-        border: 1px solid #4da7ff;
-        background: #fff;
+        border: 1px solid #4DA7FF;
+        background: #FFF;
       }
     }
   }
@@ -60,6 +60,25 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 7rem;
+
+  }
+}
+
+.slide {
+  margin-top: 1rem;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+
+  .arr {
+    width: 43px;
+    height: 43px;
+    background: #7BBEFF;
+    border-radius: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
   }
 }
 
@@ -71,13 +90,13 @@
     margin-bottom: 2rem;
     color: #000;
     text-align: center;
-    font-family: "Raleway", sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 46px;
     font-style: normal;
     font-weight: 500;
     line-height: 86.4%; /* 39.744px */
     span {
-      color: #4da7ff;
+      color: #4DA7FF;
     }
   }
 
@@ -88,11 +107,11 @@
     gap: 1rem;
 
     .picture {
-      border: 1px solid #d9dbdf;
+      border: 1px solid #D9DBDF;
       border-radius: 14px;
       width: 480px;
       height: 100%;
-      background: url("../../assets/icons/banki_all_back.png");
+      background: url('../../assets/icons/banki_all_back.png');
     }
 
     .bank_map {
@@ -123,8 +142,8 @@
           height: 60px;
           padding: 18px 40px 18px 22px;
           border-radius: 7px;
-          border: 1px solid #d9d9d9;
-          background: #fff;
+          border: 1px solid #D9D9D9;
+          background: #FFF;
 
           input {
             background: transparent;
@@ -137,7 +156,7 @@
             font-weight: 500;
             line-height: 86.4%; /* 15.552px */
             &::placeholder {
-              color: #a3a3a3;
+              color: #A3A3A3;
               font-size: 18px;
               font-style: normal;
               font-weight: 500;
@@ -148,4 +167,6 @@
       }
     }
   }
+
 }
+
