add page saving accoutns page

--- a/src/components/OfferMoth/OfferMoth.module.scss
+++ b/src/components/OfferMoth/OfferMoth.module.scss
@@ -8,6 +8,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 86.4%; /* 39.744px */
+    margin-bottom: 2rem;
     span {
       color: #4DA7FF;
     }
