--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -39,3 +39,5 @@ textarea{overflow:auto}
 optgroup{font-weight:bold}
 table{border-collapse:collapse;border-spacing:0}
 td,th{padding:0}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {-webkit-appearance: none;margin: 0;}
