--- a/src/components/OfferItem/OfferItem.module.scss
+++ b/src/components/OfferItem/OfferItem.module.scss
@@ -3,7 +3,7 @@
   border: 1px solid #D9DBDF;
   background: #FFF;
   padding: 20px;
-
+  width: 280px;
   .inf {
     display: flex;
     align-items: center;
