--- a/src/components/OffersBanks/OffersBanks.module.scss
+++ b/src/components/OffersBanks/OffersBanks.module.scss
@@ -24,4 +24,10 @@
     flex-direction: column;
     gap: 5px;
   }
+  .btn_cont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+  }
 }
