--- a/src/components/FrequentQuestions/FrequentQuestions.module.scss
+++ b/src/components/FrequentQuestions/FrequentQuestions.module.scss
@@ -1,11 +1,12 @@
 .quests {
+  margin-top: 6rem;
   .title {
     color: #000;
     text-align: center;
     font-size: 46px;
     font-style: normal;
     font-weight: 500;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     line-height: 86.4%; /* 39.744px */
   }
 
