--- a/src/screens/CreditMapPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/CreditMapPage/components/Navigation/Navigation.module.scss
@@ -3,9 +3,9 @@
   height: 376px;
   border-radius: 14px;
   border: 1px solid #d9dbdf;
-  background: #fff;
   margin-top: 32px;
   display: flex;
+  background: url('../../../../assets/icons/credit_cards_back.png') no-repeat white right;
 }
 
 .text_container {
@@ -19,15 +19,13 @@
   align-items: center;
   .black_text {
     color: #121212;
-    font-family: "Raleway";
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 86.4%;
   }
   .grey_text {
-    color: var(--2, #b4b4b4);
-    font-family: "Raleway";
+    color: #b4b4b4;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
