--- a/src/components/Choise/ChoiseItem/ChoiseItem.module.scss
+++ b/src/components/Choise/ChoiseItem/ChoiseItem.module.scss
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #000;
+  color: #4DA7FF;
   padding: 10px 16px;
   font-variant-numeric: lining-nums proportional-nums;
   font-size: 14px;
