--- a/src/components/Header/Nav/Nav.module.scss
+++ b/src/components/Header/Nav/Nav.module.scss
@@ -1,7 +1,9 @@
 .main_container {
-  background-color: white;
+  border-radius: 14px;
+  background: white;
+  border: 1px solid #D9DBDF;
   position: fixed;
-  top: 0;
+  top: 20px;
   margin-top: 80px;
   width: 1220px;
   padding: 36px;
@@ -9,6 +11,7 @@
   display: flex;
   flex-direction: row;
   gap: 100px;
+
 
   .column {
     display: flex;
@@ -18,6 +21,7 @@
 }
 
 .link {
+  transition: all ease-in-out .3s;
   color: var(--main, #121212);
   font-family: Raleway, sans-serif;
   font-size: 16px;
@@ -25,4 +29,9 @@
   font-weight: 700;
   line-height: normal;
   text-decoration: none;
+
+  &:hover {
+    color: #4da7ff;
+    transition: all ease-in-out .3s;
+  }
 }
