add page ipoteka

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,6 +35,14 @@
       font-weight: 600;
       line-height: normal;
     }
+
+    .nav_item_active {
+      color: #4DA7FF;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+    }
   }
 
   .icons {
