--- a/src/components/Offers/SpecialOfferItem/SpecialOfferItem.module.scss
+++ b/src/components/Offers/SpecialOfferItem/SpecialOfferItem.module.scss
@@ -1,6 +1,6 @@
 .item {
   width: 280px;
-  height: 405px;
+  //height: 405px;
   border-radius: 11.377px;
   border: 1px solid #D9DBDF;
   background: #FFF;
@@ -69,9 +69,9 @@
       }
     }
 
-    img {
-      width: 122px;
-      height: 49px;
-    }
+    //img {
+    //  width: 122px;
+    //  height: 49px;
+    //}
   }
 }
