--- a/src/components/Company/Company.module.scss
+++ b/src/components/Company/Company.module.scss
@@ -47,6 +47,7 @@
       height: 100%;
       font-family: Raleway, sans-serif;
       font-size: 18px;
+      background: none;
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
