--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -34,6 +34,7 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+      cursor: pointer;
     }
 
     .nav_item_active {
