--- a/src/screens/BusinessPage/components/Ecvaring/Ecvaring.module.scss
+++ b/src/screens/BusinessPage/components/Ecvaring/Ecvaring.module.scss
@@ -31,3 +31,10 @@
     margin-top: 40px;
   }
 }
+@media (max-width: 480px){
+  .items_container{
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
