--- a/src/screens/BusinessPage/components/Kassa/Kassa.module.scss
+++ b/src/screens/BusinessPage/components/Kassa/Kassa.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   margin-top: 100px;
   gap: 40px;
+
   .text {
     color: var(--main, #121212);
     text-align: center;
@@ -13,11 +14,13 @@
     font-weight: 500;
     line-height: 86.4%;
   }
+
   .items_container {
     display: flex;
     gap: 8.15px;
     width: 100%;
     justify-content: center;
+
     .item {
       display: flex;
       flex-direction: column;
@@ -26,6 +29,7 @@
       border: 0.828px solid var(--stroke-1, #D9DBDF);
       background: #FFF;
       padding: 21px 26.852px 20.958px 29px;
+
       .text {
         margin-top: 8px;
         color: #000;
@@ -36,15 +40,18 @@
         font-weight: 500;
         line-height: 86.4%;
       }
+
       .button_container {
         display: flex;
         margin-top: 24px;
         gap: 12px;
+
         div {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
           gap: 6.3px;
+
           .blue {
             color: var(--blu-main, #4DA7FF);
             font-variant-numeric: lining-nums proportional-nums;
@@ -54,6 +61,7 @@
             font-weight: 500;
             line-height: 86.4%;
           }
+
           .text {
             color: var(--main, #121212);
             font-variant-numeric: lining-nums proportional-nums;
@@ -64,6 +72,7 @@
             line-height: 86.4%;
           }
         }
+
         .button {
           color: var(--stroke-3, #4DA7FF);
           font-family: Raleway, sans-serif;
@@ -80,4 +89,16 @@
       }
     }
   }
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    .items_container {
+      justify-content: flex-start;
+      gap: 10px;
+      width: 100%;
+      overflow: auto;
+    }
+  }
+
 }
