--- a/src/screens/CreditMapPage/components/Navigation/Parametrs/Parametrs.module.scss
+++ b/src/screens/CreditMapPage/components/Navigation/Parametrs/Parametrs.module.scss
@@ -5,3 +5,10 @@
   flex-wrap: wrap;
   margin-top: 32px;
 }
+@media (max-width: 480px){
+  .main_container{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+}
