--- a/src/screens/InstallmentPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/InstallmentPage/components/Navigation/Navigation.module.scss
@@ -16,18 +16,17 @@
   gap: 8px;
   align-items: center;
 
-  .text {
+  .black_text {
     color: #121212;
-    font-family: Raleway, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 86.4%;
   }
 
-  .grey_text {
-    color: var(--2, #B4B4B4);
-    font-family: Raleway, sans-serif;
+  mark {
+    background: transparent;
+    color: #b4b4b4;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -64,26 +63,23 @@
   }
 
   .main_text_container {
-    display: flex;
-    align-items: center;
+    font-size: 46px;
+    margin-top: 32px;
+    line-height: normal;
 
-    .main_text {
+    .bold_text {
       color: var(--main, #121212);
-      font-family: Raleway, sans-serif;
-      font-size: 46px;
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
     }
 
-    .blue_text {
-      color: var(--stroke-3, #4DA7FF);
-      font-family: Raleway, sans-serif;
-      font-size: 46px;
+    mark {
+      background: transparent;
+      color: var(--stroke-3, #4da7ff);
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
-      margin-left: 8px;
     }
   }
 }
@@ -95,7 +91,7 @@
   margin-top: 32px;
   border-radius: 14px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   border: 1px solid var(--stroke-3, #4DA7FF);
   background: var(--unnamed, rgba(217, 231, 250, 0.40));
@@ -166,9 +162,12 @@
     }
 
     .text_cont {
-      width: 341px;
-      height: 52px;
+      width: 385px;
+      height: 81px;
       padding: 14px 22px 14px 22px;
+      border-radius: 9px;
+      border: 0.915px solid var(--stroke-2, #E0EAFF);
+      background: #FFF;
 
       .grey_text {
         color: #A3A3A3;
@@ -189,6 +188,68 @@
         font-weight: 500;
         line-height: 86.4%;
         margin-bottom: 8px;
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .top_container {
+    display: block;
+    text-align: center;
+  }
+  .main_container {
+    padding: 10px;
+    height: auto;
+    background-image: none;
+  }
+  .text_container {
+    padding: 10px;
+    margin: 0;
+
+    .text_cont {
+      width: 100% !important;
+    }
+  }
+  .bottom_container {
+    width: 100%;
+  }
+  .main_text_container {
+    font-size: 25px !important;
+    text-align: center;
+  }
+  .limit_container {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    .left_container {
+      width: 100%;
+      height: auto;
+
+      .text_cont {
+
+        width: 100%;
+        height: auto;
+        padding: 10px;
+
+        input {
+          width: 100%;
+        }
+      }
+
+      div {
+        backdrop-filter: none;
+        width: 100% !important;
+      }
+    }
+
+    .right_container {
+      width: 100%;
+      button {
+        width: 100% !important;
       }
     }
   }
