--- a/src/screens/NewsPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/NewsPage/components/Navigation/Navigation.module.scss
@@ -4,14 +4,12 @@
   margin-top: 32px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   padding-top: 38px;
   padding-left: 88px;
   display: flex;
   flex-direction: column;
   gap: 32px;
-  background: url("../../../../assets/icons/business_bg.jpg") right white no-repeat;
-  background-size: 600px 424px ;
+  background: url("../../../../assets/icons/news_back.png") right bottom white no-repeat;
 }
 
 .navigation_container {
@@ -80,4 +78,32 @@
   font-style: normal;
   font-weight: 500;
   line-height: 86.4%;
+}
+
+@media (max-width: 480px) {
+  .main_container{
+    width: 100%;
+    height: auto;
+    background-image: none;
+    padding: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .navigation_container{
+    justify-content: center;
+  }
+  .text_container{
+    justify-content: center;
+    .blue_text{
+      font-size: 25px;
+      text-align: center;
+    }
+    .text{
+      width: 100%;
+    }
+  }
+  .button{
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
