--- a/src/UI/BlueBtn/BlueBtn.module.scss
+++ b/src/UI/BlueBtn/BlueBtn.module.scss
@@ -15,3 +15,8 @@
   line-height: 86.4%; /* 17.28px */
   cursor: pointer;
 }
+@media (max-width: 480px){
+  .btn{
+    width: 100% !important;
+  }
+}
