--- a/src/components/BanksWithButton/Items/Items.module.scss
+++ b/src/components/BanksWithButton/Items/Items.module.scss
@@ -14,23 +14,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: #000;
+    font-variant-numeric: lining-nums proportional-nums;
+    font-family: Raleway, serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 86.4%;
+    margin-bottom: 16px;
 
-    .main_text {
-      color: #000;
-      font-variant-numeric: lining-nums proportional-nums;
-      font-family: Raleway, serif;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 86.4%;
-      margin-bottom: 16px;
-    }
-
-    .little_text {
+    span {
       color: var(--2, #B4B4B4);
       font-variant-numeric: lining-nums proportional-nums;
       font-family: Raleway, serif;
-      font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: 86.4%;
@@ -116,6 +112,37 @@
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    height: auto;
+    padding: 10px;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+
+    .text_container {
+      align-items: center;
+      justify-content: center;
+    }
+
+    .period_container, .time_container, .bonus_container {
+      width: 100%;
+      margin: 0;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      p {
+        font-size: 15px !important;
+      }
+    }
+
+    button {
+      width: 100% !important;
     }
   }
 }
