--- a/src/components/OSAGORating/OSAGOItems/OSAGOItems.module.scss
+++ b/src/components/OSAGORating/OSAGOItems/OSAGOItems.module.scss
@@ -8,10 +8,12 @@
   align-items: center;
   padding-left: 32px;
   padding-right: 32px;
+
   .name_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
+
     .main_text {
       color: #000;
       font-variant-numeric: lining-nums proportional-nums;
@@ -21,6 +23,7 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     .little_text {
       color: var(--2, #B4B4B4);
       font-variant-numeric: lining-nums proportional-nums;
@@ -31,11 +34,13 @@
       line-height: 86.4%;
     }
   }
+
   .rating_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
     margin-left: 120px;
+
     .top_text {
       color: var(--blu-main, #4DA7FF);
       font-variant-numeric: lining-nums proportional-nums;
@@ -45,6 +50,7 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     .text {
       color: var(--main, #121212);
       font-variant-numeric: lining-nums proportional-nums;
@@ -55,11 +61,13 @@
       line-height: 86.4%;
     }
   }
+
   .feedback_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
     margin-left: 180px;
+
     .top_text {
       color: var(--blu-main, #4DA7FF);
       font-variant-numeric: lining-nums proportional-nums;
@@ -69,6 +77,7 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     .text {
       color: var(--main, #121212);
       font-variant-numeric: lining-nums proportional-nums;
@@ -79,11 +88,13 @@
       line-height: 86.4%;
     }
   }
+
   .answered_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
     margin-left: 105px;
+
     .top_text {
       color: var(--blu-main, #4DA7FF);
       font-variant-numeric: lining-nums proportional-nums;
@@ -93,6 +104,7 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     .text {
       color: var(--main, #121212);
       font-variant-numeric: lining-nums proportional-nums;
@@ -103,11 +115,13 @@
       line-height: 86.4%;
     }
   }
+
   .comleted_container {
     display: flex;
     flex-direction: column;
     gap: 16px;
     margin-left: 105px;
+
     .top_text {
       color: var(--blu-main, #4DA7FF);
       font-variant-numeric: lining-nums proportional-nums;
@@ -117,6 +131,7 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     .text {
       color: var(--main, #121212);
       font-variant-numeric: lining-nums proportional-nums;
@@ -125,6 +140,33 @@
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    flex-direction: column;
+    padding: 10px;
+    height: auto;
+    flex-wrap: wrap;
+    gap: 10px;
+
+    .name_container {
+      .main_text {
+        text-align: center;
+      }
+    }
+
+    .rating_container,
+    .feedback_container,
+    .answered_container,
+    .comleted_container {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      margin: 0;
     }
   }
 }
