--- a/src/components/OSAGORating/OSAGORating.module.scss
+++ b/src/components/OSAGORating/OSAGORating.module.scss
@@ -1,4 +1,5 @@
 .main_container {
+  margin: 4rem 0;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -22,5 +23,12 @@
     flex-direction: column;
     gap: 8px;
     width: 100%;
+  }
+}
+@media (max-width: 480px){
+  .main_container{
+    .main_text{
+      font-size: 25px;
+    }
   }
 }
