--- a/src/components/Question/Question.module.scss
+++ b/src/components/Question/Question.module.scss
@@ -40,3 +40,20 @@
     line-height: 86.4%;
   }
 }
+
+@media (max-width: 480px) {
+  .main_container {
+    text-align: center;
+    height: auto;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+    margin: 0;
+    justify-content: center;
+
+    p {
+      width: 100%;
+    }
+  }
+}
