--- a/src/screens/BusinessPage/components/CreditForBank/CreditForBank.module.scss
+++ b/src/screens/BusinessPage/components/CreditForBank/CreditForBank.module.scss
@@ -4,11 +4,13 @@
   gap: 60px;
   margin-top: 100px;
   justify-content: center;
+
   .left_container {
     display: flex;
     flex-direction: column;
     justify-content: start;
     width: 482px;
+
     .main_text {
       width: 417px;
       color: var(--main, #121212);
@@ -32,9 +34,11 @@
       line-height: normal;
     }
   }
+
   .right_container {
     display: flex;
     gap: 8px;
+
     .item_container {
       width: 304px;
       height: 122px;
@@ -45,6 +49,7 @@
       flex-direction: column;
       justify-content: center;
       padding: 16px;
+
       .text {
         color: #000;
         font-variant-numeric: lining-nums proportional-nums;
@@ -55,6 +60,7 @@
         line-height: 86.4%;
         margin-top: 2px;
       }
+
       .blue_text {
         color: var(--blu-main, #4DA7FF);
         font-variant-numeric: lining-nums proportional-nums;
@@ -65,6 +71,34 @@
         font-weight: 500;
         line-height: 86.4%;
       }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+
+    .left_container {
+      width: 100%;
+      text-align: center;
+      justify-content: center;
+
+      .main_text {
+        width: 100%;
+      }
+
+      .text {
+        width: 100%;
+      }
+    }
+
+    .right_container {
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
     }
   }
 }
