--- a/src/screens/CreditMapPage/components/Offers/Offers.module.scss
+++ b/src/screens/CreditMapPage/components/Offers/Offers.module.scss
@@ -47,3 +47,10 @@
     }
   }
 }
+@media (max-width: 480px){
+  .count_container{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
+}
