--- a/src/screens/CreditMapPage/components/OffersItem/OffersItem.module.scss
+++ b/src/screens/CreditMapPage/components/OffersItem/OffersItem.module.scss
@@ -157,7 +157,7 @@
       border: 0.767px solid var(--stroke-3, #4DA7FF);
       background: #FFF;
       box-shadow: 0 2.299999952316284px 6.133333206176758px 0 rgba(217, 231, 250, 0.40);
-      backdrop-filter: blur(7.64620304107666px);
+
     }
 
     .warning_container {
@@ -171,7 +171,7 @@
       border: 0.767px solid var(--stroke-3, #4DA7FF);
       background: #FFF;
       box-shadow: 0px 2.299999952316284px 6.133333206176758px 0px rgba(217, 231, 250, 0.40);
-      backdrop-filter: blur(7.64620304107666px);
+
     }
   }
 }
@@ -180,4 +180,48 @@
 .image {
   width: 18px;
   height: 18px;
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    height: auto;
+    padding: 10px;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+  .count_cart {
+    width: 100%;
+    justify-content: center;
+  }
+  .types_container {
+    margin: 0;
+    gap: 15px;
+
+    .top_container {
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-bottom: 10px;
+
+      div {
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+      }
+    }
+  }
+  .get_cart_container {
+    margin: 0;
+    width: 100%;
+    flex-direction: column-reverse;
+
+    button {
+      width: 100% !important;
+    }
+
+    .top_container {
+      justify-content: center;
+    }
+  }
 }
