--- a/src/screens/DiscountIpotekaPage/components/Items/Items.module.scss
+++ b/src/screens/DiscountIpotekaPage/components/Items/Items.module.scss
@@ -21,3 +21,14 @@
     line-height: 86.4%;
   }
 }
+
+@media (max-width: 480px) {
+  .items_container{
+    overflow: auto;
+    justify-content: flex-start;
+    gap: 10px;
+    div{
+      flex-shrink: 0;
+    }
+  }
+}
