--- a/src/screens/NewsPage/components/News/News.module.scss
+++ b/src/screens/NewsPage/components/News/News.module.scss
@@ -1,8 +1,9 @@
-.main_contaienr {
+.main_contaifenr {
   margin-top: 32px;
   display: flex;
   gap: 24px;
   margin-bottom: 124px;
+
   .left_container {
     display: flex;
     flex-direction: column;
@@ -10,6 +11,7 @@
     width: 367px;
     padding: 32px;
     height: 682px;
+
     p {
       width: 300px;
       color: var(--main, #121212);
@@ -20,14 +22,17 @@
       font-weight: 500;
       line-height: 86.4%;
     }
+
     border-radius: 14px;
     border: 1px solid var(--stroke-1, #D9DBDF);
     background: #FFF;
+
     .line {
       width: 303px;
       height: 0.813px;
       background: #D9DBDF;
     }
+
     .button {
       width: 185px;
       height: 40px;
@@ -43,6 +48,7 @@
       background: var(--unnamed, rgba(217, 231, 250, 0.40));
     }
   }
+
   .right_container {
     border-radius: 14px;
     border: 1px solid var(--stroke-1, #D9DBDF);
@@ -51,11 +57,22 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+
     .news_container {
       display: flex;
       flex-wrap: wrap;
       width: 100%;
       gap: 16px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_contaifenr {
+    flex-wrap: wrap;
+    gap: 20px;
+    .left_container{
+      margin: 2rem 0;
     }
   }
 }
