--- a/src/assets/styles/base/_reset.scss
+++ b/src/assets/styles/base/_reset.scss
@@ -41,3 +41,4 @@ table{border-collapse:collapse;border-spacing:0}
 td,th{padding:0}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {-webkit-appearance: none;margin: 0;}
+*{font-family: 'Raleway', sans-serif !important;}
