add fixes in mobile version

--- a/src/UI/BlueBtn/BlueBtn.module.scss
+++ b/src/UI/BlueBtn/BlueBtn.module.scss
@@ -16,7 +16,7 @@
   cursor: pointer;
 }
 @media (max-width: 480px){
-  .btn{
-    width: 100% !important;
-  }
+  //.btn{
+  //  width: 100% !important;
+  //}
 }
