--- a/src/screens/CalculateKASCOPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/CalculateKASCOPage/components/Navigation/Navigation.module.scss
@@ -5,10 +5,8 @@
   padding-top: 38px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   margin-top: 32px;
-  background: url('../../../../assets/icons/kasko_bg.svg') no-repeat white right;
-  background-size: 570px 443px;
+  background: url('../../../../assets/icons/kasko_back.png') no-repeat white right;
 
   .nav {
     display: flex;
