--- a/src/screens/IpotekaOffersPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/IpotekaOffersPage/components/Navigation/Navigation.module.scss
@@ -4,7 +4,6 @@
   height: 368px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   background: url('../../../../assets/icons/ipoteka_offers_bg.jpg') no-repeat white right;
   background-size: 600px 368px;
   padding-left: 88px;
@@ -60,6 +59,29 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_container{
+    height: auto;
+    background-image: none;
+    padding: 10px;
+    .navigation_container{
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+
+    }
+    .text_Container_main{
+      .main_text{
+        text-align: center;
+        font-size: 20px;
+      }
+      .text{
+        width: 100%;
+      }
     }
   }
 }
