--- a/src/screens/IpotekaOffersPage/components/OurStrongsBig/OurStrongsBig.module.scss
+++ b/src/screens/IpotekaOffersPage/components/OurStrongsBig/OurStrongsBig.module.scss
@@ -86,3 +86,35 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .main_contianer {
+    padding: 20px;
+    background-image: none;
+    height: auto;
+
+    .text_container {
+      flex-wrap: wrap;
+      justify-content: center;
+
+      p {
+        font-size: 25px !important;
+      }
+    }
+    .items_container{
+      .item_cont{
+        width: 100%;
+        height: auto;
+        backdrop-filter: none;
+        .text_container{
+          width: 100%;
+        }
+      }
+      .top_cont{
+        p{
+          font-size: 22px !important;
+        }
+      }
+    }
+  }
+}
