--- a/src/screens/IpotekaSecondaryPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/IpotekaSecondaryPage/components/Navigation/Navigation.module.scss
@@ -3,7 +3,6 @@
   height: 416px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   margin-top: 32px;
   background: url("../../../../assets/icons/vtor_live_bg.svg") no-repeat white right top;
   padding-top: 38px;
@@ -11,10 +10,12 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
+
   .navigation {
     display: flex;
     gap: 8px;
     align-items: center;
+
     .text {
       color: #121212;
       font-family: Raleway, sans-serif;
@@ -23,6 +24,7 @@
       font-weight: 400;
       line-height: 86.4%;
     }
+
     .text_grey {
       color: var(--2, #B4B4B4);
       font-family: Raleway, sans-serif;
@@ -32,6 +34,7 @@
       line-height: 86.4%;
     }
   }
+
   .text_container {
     .text {
       color: #121212;
@@ -40,10 +43,12 @@
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
+
       span {
         color: var(--stroke-3, #4DA7FF);
       }
     }
+
     .little_text {
       margin-top: 16px;
       color: #121212;
@@ -53,6 +58,43 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .main_container {
+    height: auto;
+    background-image: none;
+    padding: 10px;
+
+    .navigation {
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+
+    }
+
+    p {
+      br {
+        display: none;
+      }
+    }
+
+    .text_container {
+      .text {
+        text-align: center;
+        font-size: 20px !important;
+        width: 100%;
+
+        span {
+          font-size: 20px !important;
+        }
+      }
+
+      .little_text {
+        width: 100%;
+      }
     }
   }
 }
