--- a/src/components/NewsItem/NewsItem.module.scss
+++ b/src/components/NewsItem/NewsItem.module.scss
@@ -12,7 +12,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 86.4%; /* 12.096px */
+    line-height: normal; /* 12.096px */
     .date {
 
     }
@@ -34,11 +34,11 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
-    line-height: 86.4%;
+    line-height: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     mark{
       background: transparent;
@@ -60,7 +60,7 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 86.4%; /* 12.096px */
+    line-height: normal; /* 12.096px */
   }
 
   .line {
