add fix in titles and line heights

--- a/src/components/FeedBacks/Feedback/Feedback.module.scss
+++ b/src/components/FeedBacks/Feedback/Feedback.module.scss
@@ -8,7 +8,7 @@
     font-size: 46px;
     font-style: normal;
     font-weight: 600;
-    line-height: 86.4%; /* 39.744px */
+    line-height: normal; /* 39.744px */
     mark {
       background: transparent;
       color: #4DA7FF;
