--- a/src/screens/InvestmentPage/components/InvestInfo/InvestInfo.module.scss
+++ b/src/screens/InvestmentPage/components/InvestInfo/InvestInfo.module.scss
@@ -62,7 +62,7 @@
           font-size: 14px;
           font-style: normal;
           font-weight: 400;
-          line-height: 86.4%; /* 12.096px */
+          line-height: normal; /* 12.096px */
           display: -webkit-box;
           -webkit-line-clamp: 3; /* number of lines to show */
           line-clamp: 3;
@@ -105,6 +105,7 @@
         width: 100% !important;
       }
       .info_items{
+        justify-content: center;
         flex-wrap: wrap;
       }
     }
@@ -113,6 +114,9 @@
     }
     .r{
       width: 100%;
+      .cont_bank{
+        justify-content: center;
+      }
       button{
         width: 100% !important;
       }
