add fixes for pages mortgage

--- a/src/screens/IpotekaNewBuilding/components/Navigation/Navigation.module.scss
+++ b/src/screens/IpotekaNewBuilding/components/Navigation/Navigation.module.scss
@@ -3,9 +3,8 @@
   height: 416px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   margin-top: 32px;
-  background: url("../../../../assets/icons/new_building_ipoteka_bg.svg") no-repeat white right top;
+  background: url("../../../../assets/icons/new_back.png") no-repeat white right top;
   padding-top: 38px;
   padding-left: 88px;
   display: flex;
