--- a/src/screens/IpotekaSecondaryPage/components/Navigation/Navigation.module.scss
+++ b/src/screens/IpotekaSecondaryPage/components/Navigation/Navigation.module.scss
@@ -4,7 +4,7 @@
   border-radius: 14px;
   border: 1px solid #D9DBDF;
   margin-top: 32px;
-  background: url("../../../../assets/icons/vtor_live_bg.svg") no-repeat white right top;
+  background: url("../../../../assets/icons/sec_back.png") no-repeat white right top;
   padding-top: 38px;
   padding-left: 88px;
   display: flex;
