--- a/src/screens/IpotekaNewBuilding/components/Navigation/Navigation.module.scss
+++ b/src/screens/IpotekaNewBuilding/components/Navigation/Navigation.module.scss
@@ -67,7 +67,10 @@
       justify-content: center;
 
     }
-
+    button{
+      margin-right: auto;
+      margin-left: auto;
+    }
     p {
       br {
         display: none;
