--- a/src/screens/SpecialCardsOfffersPage/components/OffersBanks/OffersBanks.module.scss
+++ b/src/screens/SpecialCardsOfffersPage/components/OffersBanks/OffersBanks.module.scss
@@ -5,7 +5,14 @@
   align-items: center;
   gap: 32px;
   padding-left: 2%;
-
+  .title{
+    color: #000;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 86.4%; /* 34.56px */
+  }
   .map_cont {
     display: flex;
     gap: 16px;
