--- a/src/screens/ApplicationsProfile/components/ApplicationItem/ApplicationItem.module.scss
+++ b/src/screens/ApplicationsProfile/components/ApplicationItem/ApplicationItem.module.scss
@@ -1,18 +1,33 @@
 .item {
-  width: 521px;
-  height: 75px;
-  padding: 16px;
+  width: 485px;
+  height: 159px;
+  padding: 32px 16px;
   border-radius: 7px;
   border: 1px solid #D9DBDF;
   background: #FFF;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+  mark {
+    background: transparent;
+    color: #121212;
+    font-variant-numeric: lining-nums proportional-nums;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 86.4%; /* 13.824px */
+  }
+
+  .info_m {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   .info {
     display: flex;
     flex-direction: column;
     gap: 5px;
+
     span:first-child {
       color: #000;
       font-variant-numeric: lining-nums proportional-nums;
@@ -20,6 +35,7 @@
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%; /* 20.736px */
+      margin-bottom: .5rem;
     }
 
     span {
@@ -29,6 +45,7 @@
       font-style: normal;
       font-weight: 400;
       line-height: 86.4%; /* 13.824px */
+
     }
   }
 
@@ -76,5 +93,15 @@
     font-style: normal;
     font-weight: 500;
     line-height: 86.4%; /* 12.096px */
+  }
+
+  .contact {
+    margin-top: 2rem;
+    color: var(--2, #B4B4B4);
+    font-variant-numeric: lining-nums proportional-nums;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 86.4%; /* 15.552px */
   }
 }
