--- a/src/components/QuestionItem/QuestionItem.module.scss
+++ b/src/components/QuestionItem/QuestionItem.module.scss
@@ -1,31 +1,73 @@
+
 .item {
   width: 90%;
   margin-right: auto;
   margin-left: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
-  padding: 0 10px;
+  min-height: 50px;
+  max-height: 75px;
+  padding: 10px 20px;
   cursor: pointer;
   border-radius: 7px;
   border: 1px solid var(--stroke-1, #D9DBDF);
   background: #FFF;
-
-  .title {
-    color: #404040;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
+  transition: all 0.5s;
+  user-select: none;
+  overflow: hidden;
 
 }
 
-@media (max-width: 480px){
-  .item{
+.info {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 0.5s;
+}
+
+.title {
+  color: #404040;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.text {
+  transition: all 0.5s;
+}
+
+
+.item_active {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  min-height: 50px;
+  max-height: 500px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 7px;
+  border: 1px solid var(--stroke-1, #D9DBDF);
+  background: #FFF;
+  transition: all 0.5s;
+  user-select: none;
+  overflow: hidden;
+}
+
+.plus {
+  transition: all 0.3s;
+  transform: rotate(0deg);
+}
+.plus_a {
+  transition: all 0.3s;
+  transform: rotate(45deg);
+}
+
+@media (max-width: 480px) {
+  .item {
     height: 50px;
-    .title{
+
+    .title {
       font-size: 12px;
     }
   }
