--- a/src/screens/HomePage/components/Stock/Stock.module.scss
+++ b/src/screens/HomePage/components/Stock/Stock.module.scss
@@ -3,9 +3,8 @@
   height: 553px;
   border-radius: 14px;
   border: 1px solid #D9DBDF;
-  background: #FFF;
   padding: 2rem;
-  background: url("../../../../assets/icons/back1.png") right;
+  background: url("../../../../assets/icons/back1.png") right white;
 
   .info {
     margin-top: 3rem;
