--- a/src/components/Choise/ChoiseItem/ChoiseItem.module.scss
+++ b/src/components/Choise/ChoiseItem/ChoiseItem.module.scss
@@ -13,8 +13,10 @@
   background: rgba(255, 255, 255, 0.40);
   line-height: 86.4%; /* 12.096px */
   cursor: pointer;
+  flex-shrink: 0;
 }
 .item_active{
+  flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
