add fixes in search and add calculate component

--- a/src/components/NewsItem/NewsItem.module.scss
+++ b/src/components/NewsItem/NewsItem.module.scss
@@ -2,7 +2,7 @@
   width: 375px;
 
   .info {
-    margin-top: 3rem;
+    //margin-top: 3rem;
     margin-bottom: 2rem;
     display: flex;
     justify-content: space-between;
