--- a/src/UI/Search/Search.module.scss
+++ b/src/UI/Search/Search.module.scss
@@ -56,7 +56,7 @@
     //margin-top: 120px;
     position: absolute;
     background: white;
-    width: 1200px;
+    width: 100%;
     margin-right: auto;
     margin-left: auto;
     display: flex;
