--- a/src/screens/HomePage/components/Slide/Slide.module.scss
+++ b/src/screens/HomePage/components/Slide/Slide.module.scss
@@ -1,18 +1,25 @@
+.swiper-slide{
+  width: fit-content;
+ }
 .slide {
   margin-top: 1rem;
   display: flex;
   gap: 12px;
   align-items: center;
+  justify-content: space-between;
+  flex-shrink: 0;
+  width: 100%;
 
   .arr {
-    width: 43px;
-    height: 43px;
+    width: 43px !important;
+    height: 43px !important;
     background: #7BBEFF;
     border-radius: 22px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    flex-shrink: 0;
   }
 }
 @media (max-width: 1220px){
